# logic-opt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_hsl.sh  install_ipopt.sh  make_hsl.sh
apps/: CMakeLists.txt
apps/lgp/: CMakeLists.txt  main.cc
apps/traj/: CMakeLists.txt  main.cc
cmake/: FindIpopt.cmake.in  FindMatlab.cmake  FindVAL.cmake.in  Findyaml-cpp.cmake.in  Ipopt-CMakeLists.txt.in  NLopt-CMakeLists.txt.in  VAL-CMakeLists.txt.in  ctrl_utils-CMakeLists.txt.in  logic_optConfig.cmake.in  ncollide_cpp-CMakeLists.txt.in  ncpu.sh  redis_gl-CMakeLists.txt.in  spatial_dyn-CMakeLists.txt.in  utils.cmake  yaml-cpp-CMakeLists.txt.in
include/LogicOpt/: constraints.h  ipopt.h  joint_variables.h  nlopt.h  objectives.h  world.h
include/LogicOpt/constraints/: cartesian_pose_constraint.h  constraint.h  joint_position_constraint.h  multi_constraint.h  pick_constraint.h  place_constraint.h  place_on_constraint.h  push_constraint.h  slide_on_constraint.h  surface_contact_constraint.h  touch_constraint.h
include/LogicOpt/optimization/: ipopt.h  nlopt.h  objectives.h  optimizer.h  variables.h
include/LogicOpt/planning/: a_star.h  actions.h  breadth_first_search.h  combination_generator.h  depth_first_search.h  formula.h  objects.h  parameter_generator.h  pddl.h  planner.h  proposition.h  search.h
include/LogicOpt/utils/: atomic_queue.h  optional.h  tree.h
include/TrajOpt/: constraints.h  ipopt.h  nlopt.h  world.h
include/TrajOpt/constraints/: cartesian_pose_constraint.h  constraint.h  joint_position_constraint.h  multi_constraint.h  pick_constraint.h  place_constraint.h  place_on_constraint.h  push_constraint.h  slide_on_constraint.h  surface_contact_constraint.h
include/TrajOpt/planning/: a_star.h  actions.h  breadth_first_search.h  combination_generator.h  depth_first_search.h  formula.h  objects.h  parameter_generator.h  pddl.h  planner.h  proposition.h  search.h
include/logic_opt/: constraints.h  frame.h  object.h  objectives.h  world.h
include/logic_opt/constraints/: cartesian_pose_constraint.h  collision_constraint.h  constraint.h  frame_constraint.h  multi_constraint.h  pick_constraint.h  place_constraint.h  push_constraint.h  surface_contact_constraint.h  throw_constraint.h  touch_constraint.h  trajectory_constraint.h  workspace_constraint.h
include/logic_opt/control/: opspace_controller.h  throw_constraint_scp.h
include/logic_opt/objectives/: angular_distance_objective.h  linear_distance_objective.h  workspace_objective.h
include/logic_opt/optimization/: constraints.h  ipopt.h  nlopt.h  objectives.h  optimizer.h  variables.h
include/logic_opt/planning/: a_star.h  actions.h  breadth_first_search.h  combination_generator.h  depth_first_search.h  formula.h  objects.h  parameter_generator.h  pddl.h  planner.h  proposition.h  search.h  validator.h
logicopt/: pddl.py
resources/: config.yaml  domain.pddl  hanoi_config.yaml  hanoi_domain.pddl  hanoi_problem.pddl  problem.pddl  reach_config.yaml  reach_problem.pddl
resources/franka_panda/: franka_panda.urdf
resources/robotiq_2f_85/: robotiq_2f_85.urdf
src/: CMakeLists.txt  constraints.cc  constraints.h  gurobi.h  ipopt.cc  ipopt.h  joint_variables.h  main.cc  nlopt.cc  nlopt.h  object.cc  objectives.cc  objectives.h  pddl.cc  traj.cc  world.cc
src/constraints/: cartesian_pose_constraint.cc  collision_constraint.cc  joint_position_constraint.cc  multi_constraint.cc  pick_constraint.cc  place_constraint.cc  push_constraint.cc  slide_on_constraint.cc  surface_contact_constraint.cc  throw_constraint.cc  touch_constraint.cc  trajectory_constraint.cc  workspace_constraint.cc
src/control/: opspace_controller.cc
src/matlab/: logic_opt_mex_function.h  throw_constraint_scp.cc
src/objectives/: angular_distance_objective.cc  linear_distance_objective.cc  workspace_objective.cc
src/opspace/: CMakeLists.txt
src/opspace/src/: main.cc
src/optimization/: ipopt.cc  nlopt.cc  objectives.cc
src/planning/: actions.cc  objects.cc  parameter_generator.cc  pddl.cc  planner.cc  proposition.cc  validator.cc
src/python/: CMakeLists.txt  validator.cc
tests/: CMakeLists.txt  jacobian_tests.cc  main.cc
