############################################################
# CMakeLists for the logic-opt library.
#
# Copyright 2020. All Rights Reserved.
#
# Created: October 1, 2020
# Authors: Toki Migimatsu
############################################################

message(STATUS "Configuring ${PROJECT_NAME} examples.")

# add_subdirectory(lgp)
add_subdirectory(traj)
